fix text align

--- a/less/app.less
+++ b/less/app.less
@@ -102,7 +102,7 @@
     background: url(../img/thebigday.jpg) no-repeat center;
     background-size: cover;
     height: 700px;
-    padding: 300px 0;
+    padding-top: 250px;
     @media (max-width: @screen-xs-max) {
         padding-top: 150px;
     }
@@ -111,7 +111,7 @@
         color: #f0f0f0;
         font-weight: bold;
         font-family: 'titan', sans-serif;
-        text-shadow: 0 10px 10px rgba(0, 0, 0, .5);
+        //text-shadow: -5px -5px 0 rgba(0, 0, 0, .5);
     }
 }
 
@@ -168,9 +168,10 @@
         font-size: 20px;
     }
     .thanks {
-        max-width: 305px;
+        font-size: .9em;
+        max-width: 300px;
         margin: 20px auto;
-        padding: 20px 0 10px;
+        padding-top: 10px;
         border-top: 1px solid lighten(@pink, 10%);
         border-bottom: 1px solid lighten(@pink, 10%);
     }
